objects/SVMXC__Service_Contract__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_BillToNumber__c</fullName>
        <label>Bill To Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Business_Unit__c</fullName>
        <description>Denotes the business unit related to the Service/Maintenance Contract</description>
        <inlineHelpText>Denotes the business unit related to the Service/Maintenance Contract</inlineHelpText>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompletedTxnNum__c</fullName>
        <label>Completed Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContractAdminEmail__c</fullName>
        <label>Contract Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContractAdminName__c</fullName>
        <label>Contract Admin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContractAdminPhone__c</fullName>
        <label>Contract Admin Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContractType__c</fullName>
        <label>Contract Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Status__c</fullName>
        <description>Status of the Service Contract</description>
        <inlineHelpText>Status of the Service Contract</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntitledQtyRemaining__c</fullName>
        <description>Entitled Quantity Remaining</description>
        <inlineHelpText>Entitled Quantity Remaining</inlineHelpText>
        <label>Entitled Qty Remaining</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntitledQty__c</fullName>
        <description>Entitled Quantity</description>
        <inlineHelpText>Entitled Quantity</inlineHelpText>
        <label>Entitled Qty</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InconsistentTxnNum__c</fullName>
        <formula>SMAX_PS_CompletedTxnNum__c &lt;&gt; SMAX_PS_LastTxnNum__c</formula>
        <label>Inconsistent Transaction Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Enterprise__c</fullName>
        <formula>SMAX_PS_ContractType__c = &quot;ZOSC&quot; || SVMX_PS_Parent_Contract__r.SMAX_PS_ContractType__c = &quot;ZOSC&quot;</formula>
        <label>Is Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Warranty__c</fullName>
        <formula>SMAX_PS_ContractType__c = &quot;ZW01&quot; || SVMX_PS_Parent_Contract__r.SMAX_PS_ContractType__c = &quot;ZW01&quot;</formula>
        <label>Is Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ItemCategoryDesc__c</fullName>
        <label>Item Category Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ItemCategory__c</fullName>
        <label>Item Category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ItemNotes__c</fullName>
        <description>Item Notes</description>
        <inlineHelpText>Item Notes</inlineHelpText>
        <label>Item Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ItemPrice__c</fullName>
        <description>Item Price</description>
        <inlineHelpText>Item Price</inlineHelpText>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ItemPrintAfterNotes__c</fullName>
        <description>Item Print After Notes</description>
        <inlineHelpText>Item Print After Notes</inlineHelpText>
        <label>Item Print After Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ItemPrintBeforeNotes__c</fullName>
        <description>Item Print Before Notes</description>
        <inlineHelpText>Item Print Before Notes</inlineHelpText>
        <label>Item Print Before Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MaterialSalesNotes__c</fullName>
        <description>Material Sales Notes</description>
        <inlineHelpText>Material Sales Notes</inlineHelpText>
        <label>Material Sales Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PODate__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PONumber__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PayerNumber__c</fullName>
        <label>Payer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PreviousContractNumber__c</fullName>
        <description>Previous Contract Number</description>
        <inlineHelpText>Previous Contract Number</inlineHelpText>
        <label>Previous Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PreviousQuoteNumber__c</fullName>
        <description>Previous Quote Number</description>
        <inlineHelpText>Previous Quote Number</inlineHelpText>
        <label>Previous Quote Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RenewalContractNumber__c</fullName>
        <description>Renewal Contract Number</description>
        <inlineHelpText>Renewal Contract Number</inlineHelpText>
        <label>Renewal Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RenewalQuoteNumber__c</fullName>
        <description>Renewal Quote Number</description>
        <inlineHelpText>Renewal Quote Number</inlineHelpText>
        <label>Renewal Quote Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Renewed_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed To</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts (Renewed To)</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SLA_Terms_Notes__c</fullName>
        <description>SLA Terms notes from SAP.</description>
        <inlineHelpText>SLA Terms notes from SAP.</inlineHelpText>
        <label>SLA Terms Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrg__c</fullName>
        <label>Sales Org</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesRepName__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceContractInvoiceNotes__c</fullName>
        <description>Service Contract Invoice Notes</description>
        <inlineHelpText>Service Contract Invoice Notes</inlineHelpText>
        <label>Service Contract Invoice Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceContractPrintableNotes__c</fullName>
        <description>Service Contract Printable Notes</description>
        <inlineHelpText>Service Contract Printable Notes</inlineHelpText>
        <label>Service Contract Printable Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServicePartsDiscountCovered__c</fullName>
        <description>Service Parts Discount Covered</description>
        <inlineHelpText>Service Parts Discount Covered</inlineHelpText>
        <label>Service Parts Discount Covered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceQuoteNotes__c</fullName>
        <description>Service Quote Notes</description>
        <inlineHelpText>Service Quote Notes</inlineHelpText>
        <label>Service Quote Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ShipToNumber__c</fullName>
        <label>Ship To Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldToNumber__c</fullName>
        <label>Sold To Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ThirdPartyVendorName__c</fullName>
        <label>Third Party Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ThirdPartyVendorNumber__c</fullName>
        <label>Third Party Vendor Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Contract_Renewed__c</fullName>
        <description>This is used to calculate Contract Renewal Rate. If there is a Renewal Date field it will return a value of 1. If the field is blank the value of 0 is returned.</description>
        <formula>IF( ISNULL( SVMXC__Renewal_Date__c ) , 0, 1)</formula>
        <label>Contract Renewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMX_PS_Invoice_Frequency_Type__c</fullName>
        <label>Invoice Frequency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Advance</fullName>
                </value>
                <value>
                    <fullName>Arrears</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Invoice_Frequency__c</fullName>
        <label>Invoice Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Item_Status__c</fullName>
        <description>Graphical depiction of the &quot;Is Deleted&quot; flag. If &quot;Is Deleted&quot; flag is set to TRUE - Deleted Item displays. If the &quot;Is Deleted&quot; flag is set to FALSE - Contract Item displays.</description>
        <formula>IF(SVMXC__Active__c=FALSE , IMAGE(&quot;/servlet/servlet.FileDownload?file=0153A000003zqIe&quot;,&quot;Blue&quot;), 
IF( SVMXC__End_Date__c &lt; TODAY () ||SVMXC__Start_Date__c &gt; Today() || SMAX_PS_IsDeleted__c = True , IMAGE(&quot;/servlet/servlet.FileDownload?file=0153A000004IFeR&quot;, &quot;Red&quot;), 
IF ( SVMXC__End_Date__c &gt; TODAY () &amp;&amp;  SVMXC__Start_Date__c &lt; Today() &amp;&amp; SMAX_PS_IsDeleted__c = False, IMAGE(&quot;/servlet/servlet.FileDownload?file=0153A000003ynmH&quot;, &quot;Green&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file= 0153A000003ynmH&quot;, &quot;Green&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green checkmark denotes within the Contract Detail Start and End Dates. Red X denotes expired contract dates. Red dollar sign denotes that the Account is on Credit Hold.</inlineHelpText>
        <label>Item Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Parent_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Contract Items</relationshipLabel>
        <relationshipName>ChildServiceMaintnanceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Service_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship between Service/Maintenance Contract and Service Quote</description>
        <inlineHelpText>Relationship between Service/Maintenance Contract and Service Quote</inlineHelpText>
        <label>Service Quote</label>
        <referenceTo>SVMXC__Quote__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>ContractItem</fullName>
        <active>true</active>
        <label>Contract Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ServiceContract</fullName>
        <active>true</active>
        <label>Service Contract</label>
    </recordTypes>
</CustomObject>